tests/rosetta/transpiler/TypeScript/conditional-structures-6.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/conditional-structures-6.mochi:6:7: unexpected token "|" (expected "=>" Expr)
  --> /workspace/mochi/tests/rosetta/x/Mochi/conditional-structures-6.mochi:6:7

  6 |     2 | 3 | 4 => null
    |       ^

help:
  Parse error occurred. Check syntax near this location.